examples/fail/refs-line-breaks.org
* Test
** Section Named Section 1
In ABC ABC ABC ABC ABC ABC ABC ABC ABC ABC ABC ABC ABC [[Section Named
Section 2]]
** Section Named Section 2

In ABC ABC ABC ABC ABC ABC ABC ABC ABC ABC ABC ABC ABC [[Section%20Named%20Section%201][Section Named
Section 1]]

